<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivProfile"
        android:contentDescription="@string/profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_profile"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfile"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/username"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/user_bio"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/journey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="105dp"
        android:paddingTop="250dp"
        android:text="@string/logged"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="250dp"
        android:paddingTop="250dp"
        android:text="@string/point"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="65dp"
        android:paddingTop="290dp"
        android:text="@string/journeys_logged"
        android:textAlignment="center"
        android:textSize="22sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="215dp"
        android:paddingTop="290dp"
        android:text="@string/points_accum"
        android:textAlignment="center"
        android:textSize="22sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

</RelativeLayout>